--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 <head>
 
-  <!-- Basic Page Needs
+  <!-- Page Set UP
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Jarod Bibb- Web Developer</title>
   <meta name="description" content="Jarod Bibb">
-  <meta name="author" content="">
 
-  <!-- Mobile Specific Metas
+  <!-- Mobile 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -38,7 +33,7 @@
     <a href="#" class="banner"><p><strong>Jarod Bibb</strong><p></a>
     <nav class="nav-link-container u-pull-right">
       
-      <p><a class="nav-link" target="_blank" href="Jeffrey_Baucom.pdf">Resume</a></p>
+      <p><a class="nav-link" target="_blank" href="">Resume</a></p>
       <p><a class="nav-link" target="_blank"href="https://www.linkedin.com/in/jarod-bibb-8ab03670"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
 </a></p>
       <p><a class="nav-link" target="_blank" href="https://github.com/jarodbibb"><i class="fa fa-github-square" aria-hidden="true"></i>
@@ -56,7 +51,7 @@
       <div class="one-half column bio-half">
               <h1>Hello, I am Jarod</h1>
               <h4><strong></strong></h4>
-        <p>While I consider myself a front end developer, I appreciate having a hand at every layer of the stack. My ambition is to become a full stack developer by immersing myself in experiences that range from front end frameworks with AngularJS and ReactJS to back end technologies like MongoDB, Node.js, and .NET.</p>
+        <p>I  am a software developer that enjoys My ambition is to become a full stack developer by immersing myself in experiences that range from front end framework with Angular to back end technologies like MongoDB, Node.js, Django, Flask and Rails</p>
         <p>If you'd like to get in touch with me, please send me an <a href="mailto:jbibb8@gmail.com" target="_top">email</a></p>
       </div>
     </div>
