--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Jarod Bibb- Web Developer</title>
   <meta name="description" content="Jarod Bibb">
 
-  <!-- Mobile 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +19,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark" rel="stylesheet">
+
   <link rel="stylesheet" href="css/myStyles.css">
 
   <!-- Favicon
@@ -35,7 +35,7 @@
     <a href="#" class="banner"><p><strong>Jarod Bibb</strong><p></a>
     <nav class="nav-link-container u-pull-right">
       
-      <p><a class="nav-link" target="_blank" href="">Resume</a></p>
+      <p><a class="nav-link" target="_blank" href="resumecorrrect.pdf">Resume</a></p>
       <p><a class="nav-link" target="_blank"href="https://www.linkedin.com/in/jarod-bibb-8ab03670"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
 </a></p>
       <p><a class="nav-link" target="_blank" href="https://github.com/jarodbibb"><i class="fa fa-github-square" aria-hidden="true"></i>
@@ -48,13 +48,13 @@
   <div class="container">
     <div class="row">
       <div class="one-half column bio-half">
-        <img class='circle-clip' src="images/jeff1.png" width="400" height="400"></img>
+        <img class='circle-clip' src="images/jeff1.png" width="400" height="400">
       </div>
       <div class="one-half column bio-half">
               <h1>Hello, I am Jarod</h1>
-              <h4><strong></strong></h4>
-        <p>I  am a software developer that enjoys My ambition is to become a full stack developer by immersing myself in experiences that range from front end framework with Angular to back end technologies like MongoDB, Node.js, Django, Flask and Rails</p>
-        <p>If you'd like to get in touch with me, please send me an <a href="mailto:jbibb8@gmail.com" target="_top">email</a></p>
+              <h4><strong>I am on a journey to improve the user experience</strong></h4>
+        <p>I am a software developer that enjoys developing at every level of an application. I aspire to become a full stack developer and am pursuing my dream by continually playing and experimenting with a front end framework like Angular and back end technologies like MongoDB, Node.js, Django, Flask and Rails.</p>
+        <p>I would love to hear from you. Please shoot me an <a href="mailto:jbibb8@gmail.com" target="_top">email</a></p>
       </div>
     </div>
   </div>
