--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href="#" class="banner"><p><strong>Jarod Bibb</strong><p></a>
     <nav class="nav-link-container u-pull-right">
       
-      <p><a class="nav-link" target="_blank" href="resumecorrrect.pdf">Resume</a></p>
+      <p><a class="nav-link" target="_blank" href="resumecorrect.pdf">Resume</a></p>
       <p><a class="nav-link" target="_blank"href="https://www.linkedin.com/in/jarod-bibb-8ab03670"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
 </a></p>
       <p><a class="nav-link" target="_blank" href="https://github.com/jarodbibb"><i class="fa fa-github-square" aria-hidden="true"></i>
