linked github and linkin

--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
 
   <link rel="stylesheet" href="css/myStyles.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
 </head>
 <body>
@@ -36,9 +32,9 @@
     <nav class="nav-link-container u-pull-right">
       
       <p><a class="nav-link" target="_blank" href="resumecorrect.pdf">Resume</a></p>
-      <p><a class="nav-link" target="_blank"href="https://www.linkedin.com/in/jarod-bibb-8ab03670"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+      <p><a class="nav-link" target="_blank"href="https://www.linkedin.com/in/jarod-bibb-8ab03670"><img src="images/linked.png" width="25" height="25">
 </a></p>
-      <p><a class="nav-link" target="_blank" href="https://github.com/jarodbibb"><i class="fa fa-github-square" aria-hidden="true"></i>
+      <p><a class="nav-link" target="_blank" href="https://github.com/jarodbibb"><img src="images/github.png" width="25" height="25">
 </a></p>
     </nav>
   </div>
@@ -48,7 +44,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column bio-half">
-        <img class='circle-clip' src="images/jeff1.png" width="400" height="400">
+        <img class='circle-clip' src="images/jarod.jpg" width="400" height="400">
       </div>
       <div class="one-half column bio-half">
               <h1>Hello, I am Jarod</h1>
